codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_mcp_completion_restores_working.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "rendered_chatwidget_snapshot(&chat, 80)"
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.5 default · /tmp/project                                                "
