codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_patch_activity_summary.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "rendered_chatwidget_snapshot(&chat, 80)"
---
"                                                                                "
"• Editing 2 files (0s • esc to interrupt)                                       "
"  └ src/app.rs, src/status.rs                                                   "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.5 default · /tmp/project                                                "
